--- a/config
+++ b/config
@@ -1,14 +1,24 @@
+# i3-gaps
+smart_gaps on
+smart_gaps inverse_outer
+# smart_borders on
+smart_borders no_gaps
+hide_edge_borders smart_no_gaps
+
 # i3 config file (v4)
 
 set $mod Mod4
-set $up l
-set $down k
-set $left j
-set $right semicolon
-set $term vbeterm
-set $mediaplayer spotify
+set $alt Mod1
+set $up k
+set $down j
+set $left h
+set $right l
+# set $term vbeterm
+set $term kitty
+# set $mediaplayer spotify
 
-font pango:Iosevka Aile 9
+# font pango:Iosevka Aile 9
+font pango:monospace 10
 
 # Style and colors
 default_border pixel 3
@@ -21,34 +31,47 @@ client.urgent           #2f343a #d00000 #ffffff #d00000   #d00000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 client.background       #ffffff
 
+# dmenu for passwords: copies password into clipboard
+bindsym $mod+Shift+p exec --no-startup-id passmenu
+
 # Audio
-bindsym XF86AudioRaiseVolume exec --no-startup-id exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym XF86AudioLowerVolume exec --no-startup-id exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym XF86AudioMute        exec --no-startup-id exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym XF86AudioMicMute     exec --no-startup-id exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bindsym XF86AudioPlay        exec --no-startup-id exec playerctl -p $mediaplayer play-pause
-bindsym XF86AudioPause       exec --no-startup-id exec playerctl -p $mediaplayer pause
-bindsym XF86AudioStop        exec --no-startup-id exec playerctl -p $mediaplayer stop
-bindsym XF86AudioNext        exec --no-startup-id exec playerctl -p $mediaplayer next
-bindsym XF86AudioPrev        exec --no-startup-id exec playerctl -p $mediaplayer previous
-bindsym $mod+s exec --no-startup-id exec ~/.config/i3/bin/rofi-mediaplayer $mediaplayer
+set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id exec pactl set-sink-volume @DEFAULT_SINK@ +5% && refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id exec pactl set-sink-volume @DEFAULT_SINK@ -5% && refresh_i3status
+bindsym XF86AudioMute        exec --no-startup-id exec pactl set-sink-mute @DEFAULT_SINK@ toggle && refresh_i3status
+bindsym XF86AudioMicMute     exec --no-startup-id exec pactl set-source-mute @DEFAULT_SOURCE@ toggle && refresh_i3status
+bindsym XF86AudioPlay        exec --no-startup-id exec playerctl -p $mediaplayer play-pause && refresh_i3status
+bindsym XF86AudioPause       exec --no-startup-id exec playerctl -p $mediaplayer pause && refresh_i3status
+bindsym XF86AudioStop        exec --no-startup-id exec playerctl -p $mediaplayer stop && refresh_i3status && refresh_i3status
+bindsym XF86AudioNext        exec --no-startup-id exec playerctl -p $mediaplayer next && refresh_i3status
+bindsym XF86AudioPrev        exec --no-startup-id exec playerctl -p $mediaplayer previous && refresh_i3status
+bindsym $mod+p exec --no-startup-id exec ~/.config/i3/bin/rofi-mediaplayer $mediaplayer
 
 # Brightness
-bindsym XF86MonBrightnessUp exec --no-startup-id exec brightnessctl set +5%
-bindsym XF86MonBrightnessDown exec --no-startup-id exec brightnessctl set 5%-
+# bindsym XF86MonBrightnessUp exec --no-startup-id exec brightnessctl set +5%
+# bindsym XF86MonBrightnessDown exec --no-startup-id exec brightnessctl set 5%-
+# TODO: Look into brightnessctl as light replacement
+
+# Use light to adjust screen and keyboard backlight brightness.
+set $backlight_inc 1
+set $kbd_backlight "$(light -L | grep kbd | sed 's/^[[:space:]]//')"
+bindsym XF86KbdBrightnessDown exec --no-startup-id light -s $kbd_backlight -U $backlight_inc
+bindsym XF86KbdBrightnessUp exec --no-startup-id light -s $kbd_backlight -A $backlight_inc
+bindsym XF86MonBrightnessDown exec --no-startup-id light -U $backlight_inc
+bindsym XF86MonBrightnessUp exec --no-startup-id light -A $backlight_inc
 
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec exec $term
+bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
-bindsym $mod+x kill
+bindsym $mod+Shift+q kill
 
 # execute command
 set $rofi exec rofi -modi drun -show drun -show-icons -drun-match-fields name
-bindsym $mod+r      exec --no-startup-id $rofi
+bindsym $mod+o      exec --no-startup-id $rofi
 bindsym XF86LaunchA exec --no-startup-id $rofi
 
 # change focus
@@ -57,26 +80,75 @@ bindsym $mod+$down  focus down
 bindsym $mod+$up    focus up
 bindsym $mod+$right focus right
 
+# alternatively, you can use the cursor keys:
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
+
 # move focused window
 bindsym $mod+Shift+$left  move left
 bindsym $mod+Shift+$down  move down
 bindsym $mod+Shift+$up    move up
 bindsym $mod+Shift+$right move right
-bindsym $mod+o            move container to output right
+bindsym $mod+Ctrl+o      move container to output right
+
+# alternatively, you can use the cursor keys:
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
 
 # resize focused window
-bindsym $mod+Ctrl+$left  resize shrink width 10 px or 4 ppt
-bindsym $mod+Ctrl+$down  resize grow height 10 px or 4 ppt
-bindsym $mod+Ctrl+$up    resize shrink height 10 px or 4 ppt
-bindsym $mod+Ctrl+$right resize grow width 10 px or 4 ppt
+# bindsym $mod+Ctrl+$left  resize shrink width 10 px or 4 ppt
+# bindsym $mod+Ctrl+$down  resize grow height 10 px or 4 ppt
+# bindsym $mod+Ctrl+$up    resize shrink height 10 px or 4 ppt
+# bindsym $mod+Ctrl+$right resize grow width 10 px or 4 ppt
+# resize window (you can also use the mouse for that)
+
+mode "resize" {
+        # These bindings trigger as soon as you enter the resize mode
+
+        # Pressing left will shrink the window’s width.
+        # Pressing right will grow the window’s width.
+        # Pressing up will shrink the window’s height.
+        # Pressing down will grow the window’s height.
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
+
+        # same bindings, but for the arrow keys
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Up resize grow height 10 px or 10 ppt
+        bindsym Down resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
+
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+        bindsym $mod+r mode "default"
+}
+
+bindsym $mod+r mode "resize"
+
+# split in horizontal orientation
+bindsym $mod+$alt+h split h
+
+# split in vertical orientation
+bindsym $mod+$alt+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 bindsym $mod+Shift+f fullscreen toggle global
 
 # change container layout (tabbed, toggle split)
-bindsym $mod+w layout toggle splitv splith tabbed
-bindsym $mod+v split toggle
+# bindsym $mod+w layout toggle splitv splith tabbed
+# bindsym $mod+v split toggle
+# Original:
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -86,6 +158,9 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
+
+# focus the child container
+bindsym $mod+b focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -115,7 +190,7 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 bindsym $mod+Tab nop "previous-workspace"
-bindsym $mod+Ctrl+o focus output right
+bindsym $mod+$alt+o focus output right
 bindsym $mod+n nop "new-workspace"
 focus_wrapping no
 
@@ -130,18 +205,25 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
-bindsym $mod+Shift+o move workspace to output right
+bindsym $mod+Shift+o  move workspace to output right
 bindsym $mod+Shift+n nop "move-to-new-workspace"
 
 # reload/restart
-bindsym $mod+Shift+c exec --no-startup-id exec systemctl --user reload --no-block i3.service
+# TODO: Figure out WTF
+# bindsym $mod+Shift+c exec --no-startup-id exec systemctl --user reload --no-block i3.service
+bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
+# exit i3 (logs you out of your X session)
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Escape exec "loginctl lock-session"
+
 # Lock screen and print screen
-bindsym XF86ScreenSaver exec --no-startup-id exec xset s activate
-bindsym $mod+Delete exec --no-startup-id exec xset s activate
-bindsym Print exec --no-startup-id exec ~/.config/i3/bin/screenshot window
-bindsym $mod+Print exec --no-startup-id exec ~/.config/i3/bin/screenshot desktop
+# TODO: Investigate xset and Print bindings on macbook
+# bindsym XF86ScreenSaver exec --no-startup-id exec xset s activate
+# bindsym $mod+Delete exec --no-startup-id exec xset s activate
+# bindsym Print exec --no-startup-id exec ~/.config/i3/bin/screenshot window
+# bindsym $mod+Print exec --no-startup-id exec ~/.config/i3/bin/screenshot desktop
 
 # Quake window
 bindsym $mod+grave nop "quake-console:$term:QuakeConsoleNeedsUniqueName:0.3"
@@ -160,8 +242,15 @@ for_window [title="Firefox — Sharing Indicator"] border pixel 1, sticky enable
 no_focus [title="Firefox — Sharing Indicator"]
 
 # Start stuff
-exec_always --no-startup-id exec systemctl --user start --no-block i3-session.target
-exec --no-startup-id exec i3-msg "\
-  workspace number 1; append_layout ~/.config/i3/ws-emacs.json; exec exec emacs; exec exec $term; exec exec $term; \
-  workspace number 2; exec nm-online -q -t 5 && exec firefox; \
-  workspace number 1"
+# TODO: Replace default layout-loading code from cloned repo with my own (ewwww...emacs)
+# exec_always --no-startup-id exec systemctl --user start --no-block i3-session.target
+# exec --no-startup-id exec i3-msg "\
+#   workspace number 1; append_layout ~/.config/i3/ws-emacs.json; exec exec emacs; exec exec $term; exec exec $term; \
+#   workspace number 2; exec nm-online -q -t 5 && exec firefox; \
+#   workspace number 1"
+
+# Start i3bar to display a workspace bar (plus the system information i3status
+# finds out, if available)
+bar {
+        status_command i3status
+}
