--- a/config
+++ b/config
@@ -31,6 +31,14 @@ client.urgent           #2f343a #d00000 #ffffff #d00000   #d00000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 client.background       #ffffff
 
+# start dmenu (a program launcher)
+bindsym $mod+d exec --no-startup-id dmenu_run
+# A more modern dmenu replacement is rofi:
+bindsym $mod+Shift+d exec "rofi -modi drun,run -show drun"
+# There also is i3-dmenu-desktop which only displays applications shipping a
+# .desktop file. It is a wrapper around dmenu, so you need that installed.
+# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+
 # dmenu for passwords: copies password into clipboard
 bindsym $mod+Shift+p exec --no-startup-id passmenu
 
