Added old polybar config

--- a/dotfiles/polybar.conf
+++ b/dotfiles/polybar.conf
@@ -29,9 +29,17 @@ foreground = ${colors.foreground}
 font-0 = Iosevka:style=Regular:size=10;4
 font-1 = Font Awesome 6 Pro:style=Solid:size=10;4
 font-2 = Font Awesome 6 Brands:style=Regular:size=10;4
+font-3 = DejaVu Sans Mono:style=Oblique:size=11;0
+font-4 = DejaVu Sans Mono:style=Bold:size=16;0
+font-5 = DejaVu Sans:style=Book:size=10;0
 
 modules-left = i3
 modules-center = date weather
+
+; Old config:
+; modules-left = yin-yang i3 jollyroger pulseaudio hammerandsickle 
+; modules-center = xwindow backlight
+; modules-right = spades cpu hearts memory diamonds battery clubs temperature shamrock date
 
 [bar/alone]
 inherit = bar/common
