Makefile polybar autorandr variety

--- a/dotfiles/systemd/autorandr.service
+++ b/dotfiles/systemd/autorandr.service
@@ -3,6 +3,6 @@ Description=Configure monitors
 PartOf=graphical-session.target
 
 [Service]
-ExecStart=/usr/bin/autorandr --change --default default --force
+ExecStart=/usr/bin/autorandr --change --force
 Type=oneshot
 RemainAfterExit=false
